--- a/catalog/templates/catalog/catalogs.html
+++ b/catalog/templates/catalog/catalogs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Контактные данные</title>
+    <title>Главная</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
 </head>
 <body>
@@ -80,71 +80,5 @@
             </div>
         </div>
     </div>
-    <div class="bg-dark">
-        <span class="border border-white"></span>
-    </div>
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-5 mt-4">
-            <div class="container mt-5 text-center">
-                <div class="card text-center border border-black w-100 mb-3 mt-5">
-                    <div class="card-header">
-                        <h1>Свяжитесь с нами</h1>
-                    </div>
-                    <div class="card-body">
-                        <form method="post" action="">
-                            {% csrf_token %}
-                            <div class="mb-3">
-                                <label for="name" class="form-label">Ваше имя</label>
-                                <input type="text" class="form-control" placeholder="Иван Иванов" id="name" name="name" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Ваш email</label>
-                                <input class="form-control" placeholder="ivanov@mail.ru" id="email" name="email" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="message" class="form-label">Ваше сообщение</label>
-                                <textarea class="form-control" id="message" placeholder="Я приобрел ваше устройство... Хочу заказать еще" name="message" rows="5" required></textarea>
-                            </div>
-                            <button type="submit" class="btn btn-dark w-100">Отправить</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-5 mt-4">
-            <div class="container text-center mt-2">
-                <div class="mt-1">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                </div>
-                <div class="mt-1">
-                    <img class="mt-5" src="https://cdn-icons-png.flaticon.com/128/3240/3240602.png">
-                    <img class="mt-5" src="https://cdn-icons-png.flaticon.com/128/727/727242.png">
-                    <img class="mt-5" src="https://cdn-icons-png.flaticon.com/128/3240/3240602.png">
-                </div>
-                <div class="mt-5 text-center">
-                    <img src="https://cdn-icons-png.flaticon.com/128/16739/16739865.png">
-                </div>
-                <div class="mt-5">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                    <img src="https://img.icons8.com/?size=80&id=22275&format=png">
-                </div>
-            </div>
-            <div class="col-1"></div>
-        </div>
-
-    </div>
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
