creat contacts.html

--- a/catalog/templates/catalog/contacts.html
+++ b/catalog/templates/catalog/contacts.html
@@ -16,26 +16,28 @@
                             <div class="row">
                                 <div class="col-12 bg-body">
                                     <div class="row">
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/home.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Главная</a>
                                             </h6>
                                         </div>
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/home.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Акции</a>
                                             </h6>
                                         </div>
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/home.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Корзина</a>
                                             </h6>
                                         </div>
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/home.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Каталог</a>
                                             </h6>
                                         </div>
+                                        <div class="col-2"></div>
+                                        <div class="col-2"></div>
                                     </div>
                                 </div>
                             </div>
@@ -51,22 +53,24 @@
                             <div class="row">
                                 <div class="col-12 bg-body">
                                     <div class="row">
-                                        <div class="col-3">
+                                        <div class="col-2"></div>
+                                        <div class="col-2"></div>
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/home.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">О нас</a>
                                             </h6>
                                         </div>
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/contacts.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Контакты</a>
                                             </h6>
                                         </div>
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/home.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Отзывы</a>
                                             </h6>
                                         </div>
-                                        <div class="col-3">
+                                        <div class="col-2">
                                             <h6 class="text-center mt-2">
                                                 <a href="file:///C:/Users/ЗС/PycharmProjects/project_django2/catalog/templates/catalog/home.html" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Профиль</a>
                                             </h6>
