--- a/catalog/templates/catalog/home.html
+++ b/catalog/templates/catalog/home.html
@@ -64,7 +64,7 @@
                     {{ product.description|truncatechars:100 }}
                     <h6>Категория: {{ product.category }}</h6>
                     <h6>Цена: {{ product.purchase_price }} рублей</h6>
-                    <button class="rounded text-center w-100 btn btn btn-outline-info border border-secondary-subtle"><a  class="link-body-emphasis link-offset-2 link-underline link-underline-opacity-0" href="#">Перейти</a></button>
+                    <button class="rounded text-center w-100 btn btn btn-outline-info border border-secondary-subtle"><a  class="link-body-emphasis link-offset-2 link-underline link-underline-opacity-0" href="{% url 'catalog:product_detail' product.id %}">Перейти</a></button>
                 </div>
             {% endfor %}
         </div>
