--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -12,7 +12,7 @@
     {% if posts %}
         <div class="row mt-5">
             {% for post in posts %}
-                <div class="col-2 mt-3">
+                <div class="col-2 mt-3 mx-3">
                     <h4 class="mt-4">{{ post.title }}</h4>
                     {% if post.image %}
                         <img src="{{ post.image.url }}" class="img-fluid img-thumbnail w-100">
