--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -67,7 +67,7 @@
                                         </div>
                                         <div class="col-2">
                                             <h6 class="text-center mt-2">
-                                                <a href="#" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Отзывы</a>
+                                                <a href="{% url 'blog:post_list' %}" class="link-offset-2 link-underline link-underline-opacity-0 link-dark">Блог</a>
                                             </h6>
                                         </div>
                                         <div class="col-2">
