--- a/catalog/templates/catalog/category_detail.html
+++ b/catalog/templates/catalog/category_detail.html
@@ -11,8 +11,11 @@
             </div>
             <div class="container btn-group w-100" role="group" aria-label="Basic example">
                 <button class="btn btn-outline-primary btn-lg  mt-2 "><a href="{% url 'catalog:category_list'%}" class="link-body-emphasis link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Вернуться к списку</a></button>
-                <button class=" btn btn-outline-primary btn-lg mt-2 "><a href="{% url 'catalog:category_update' category.pk %}" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Редактировать</a></button>
-                <button class=" btn btn-outline-danger btn-lg mt-2 "><a href="{% url 'catalog:category_delete' category.pk %}" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Удалить</a></button>
+                {% if user.is_staff %}
+                    <button class=" btn btn-outline-primary btn-lg mt-2 "><a href="{% url 'catalog:category_update' category.pk %}" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Редактировать</a></button>
+                    <button class=" btn btn-outline-danger btn-lg mt-2 "><a href="{% url 'catalog:category_delete' category.pk %}" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Удалить</a></button>
+                {% else %}
+                {% endif %}
             </div>
             {% for product in products %}
                 <div class="col-3 mt-3">
