--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -25,6 +25,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Контакты</a>
                 </li>
+                <div class="dropdown mb-2">
+                    <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Профиль
+                    </button>
+                    <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
+                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Вход</a></li>
+                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Выход</a></li>
+                        <li><a class="dropdown-item text-white" href="goods/catalog.html">Регистрация</a></li>
+                    </ul>
+                </div>
             </ul>
         </div>
     </nav>
