--- a/users/templates/users/user_detail.html
+++ b/users/templates/users/user_detail.html
@@ -1,26 +1,27 @@
 {% extends 'catalog/base.html' %}
 
-{% block title%}Информация о продукте{% endblock %}
+{% block title%}Личный профиль{% endblock %}
 
 {% block content %}
-{% if category %}
-        <div class="row text-center">
-            <div class="col-12 text-center">
-                        <h4 class="mt-2">{{ user.username }}</h4>
-            </div>
-            <div class="container btn-group w-100" role="group" aria-label="Basic example">
-                <button class=" btn btn-outline-primary btn-lg mt-2 "><a href="{% url 'users:user_update' user.pk %}" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Редактировать</a></button>
-                <button class=" btn btn-outline-danger btn-lg mt-2 "><a href="{% url 'users:user_delete' user.pk %}" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Удалить</a></button>
-                <h6 class="text-center mt-2 dropdown-item text-white">
-                    <form method="post" action="{% url 'users:logout' %}">
-                        {% csrf_token %}
-                        <button class=" btn btn-light btn-sm"><h6>Выйти</h6></button>
-                    </form>
-                </h6>
-            </div>
+    <div class="card text-center mt-4" style="width: 80rem;">
+        {% if user.avatar %}
+            <img src="#" class="card-img-top">
+        {% else %}
+            <li class="list-group-item">Добавьте фото пользователя</li>
+        {% endif %}
+        <div class="card-body">
+    <h5 class="card-title">{{ user.username }}</h5>
 
-        </div>
-{% else %}
-
-{% endif %}
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Имя пользователя: {{ user.username }}</li>
+    <li class="list-group-item">Номер телефона: {{ user.phone_number }}</li>
+    <li class="list-group-item">Почта: {{ user.email }}</li>
+    <li class="list-group-item">Страна: {{ user.country }}</li>
+  </ul>
+  <div class="card-body text-end">
+      <button class=" btn btn-outline-primary btn-lg"><a href="{% url 'users:edit_profile' user.username %}" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Редактировать</a></button>
+      <button class=" btn btn-outline-danger btn-lg"><a href="#" class="link-dark link-offset-2 link-underline link-underline-opacity-0 mt-4 mx-1 ">Удалить</a></button>
+  </div>
+</div>
 {% endblock %}
