--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'catalog/base.html' %}
 {% block title %} {post.title} Удаление книги {% endblock %}
 {% block content %}
 {% include 'blog/header.html' %}
