--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,5 +1,5 @@
-{% extends 'blog/base.html' %}
-{% block title %} {post.title}Форма для поста {% endblock %}
+{% extends 'catalog/base.html' %}
+{% block title %} Форма для поста {% endblock %}
 {% block content %}
 {% include 'blog/header.html' %}
     <div class="container mt-5">
