--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% extends 'catalog/base.html' %}
 
 {% block title%}Информация о продукте{% endblock %}
 
@@ -17,9 +17,11 @@
     </div>
 </div>
 <div class="text-end">
-    <a href="{% url 'blog:post_edit' post.pk %}" class="btn btn-secondary">Редактировать</a>
+    <a href="{% url 'blog:post_list' %}" class="btn btn-primary">Вернуться к списку</a>
+    {% if is_manager %}
+        <a href="{% url 'blog:post_edit' post.pk %}" class="btn btn-secondary">Редактировать</a>
         <a href="{% url 'blog:post_delete' post.pk %}" class="btn btn-danger">Удалить</a>
-        <a href="{% url 'blog:post_list' %}" class="btn btn-primary">Вернуться к списку</a>
+    {% endif %}
 </div>
 <div class=" mt-5">
         <span class="border border-white"></span>
